--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
+      - run: npm install -g gulp
       - run: gulp
       - run: npx cypress run
 
