--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run: npm install
       - run: npm install -g gulp
-      - run: gulp
+      - run: gulp -d
       - run: npx cypress run
 
 workflows:
