--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,13 @@ jobs:
       - run: npm install
       - run: npm install -g gulp
       - run: gulp build
+          background: true 
       - run: npx cypress run
 
 workflows:
   version: 2
   build:
     jobs:
-      - build
+      - build:
+          environment:
+            BROWSER: $BROWSER
