--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - run: npm install
       - run: npm install -g gulp
       - run: gulp build
+          name: Build application
           background: true 
       - run: npx cypress run
 
