--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,20 @@
 version: 2.1
-
 jobs:
   build:
     docker:
-      - image: cypress/included:12.6.0
+    - image: 'cypress/included:12.6.0'
     steps:
-      - checkout
-      - run: npm install
-      - run: npm install -g gulp
-      - run: gulp build
-          name: Build application
-          background: true 
-      - run: npx cypress run
-
+    - checkout
+    - run: npm install
+    - run: npm install -g gulp
+    - run: gulp build
+      name: Build application
+      background: true
+    - run: npx cypress run
 workflows:
   version: 2
   build:
     jobs:
-      - build:
-          environment:
-            BROWSER: $BROWSER
+    - build:
+        environment:
+          BROWSER: $BROWSER
