--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  build:
+  test:
     docker:
     - image: 'cypress/included:12.6.0'
     steps:
@@ -16,6 +16,5 @@ workflows:
   version: 2
   build:
     jobs:
-    - build:
-        environment:
-          BROWSER: $BROWSER
+    - test:
+
