--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
         name: Build application
         command: gulp build
         background: true
+    - wait_for_background: true
     - run: npx cypress run
 workflows:
   build:
