--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,8 @@ jobs:
     - run: npm install -g gulp
     - run:
         name: Build application
-        command: gulp build
+        command: gulp
         background: true
-    - wait_for_background: true
     - run: npx cypress run
 workflows:
   build:
